--- a/github-issue-tracker/settings.html
+++ b/github-issue-tracker/settings.html
@@ -7,7 +7,7 @@
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <script src="js-for-extension-settings.js"></script>
+    <script src="js-extension-preference.js"></script>
         <div id="targetdiv"></div>
         <h2>Configure Repositories</h2>
         <div class="repos-container">
