--- a/github-issue-tracker/settings.html
+++ b/github-issue-tracker/settings.html
@@ -55,5 +55,8 @@
                 
             </table>
         </div>
+        <div id="log-holder">
+            
+        </div>
 </body>
 </html>
